# qTransformer_on_frustrated_Heisenberg_model

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml
conf/evaluation/: default.yaml
conf/experiment/: baseline.yaml  benchmark.yaml  default.yaml  ed.yaml  quantum_benchmark.yaml  scaling.yaml  test.yaml  validation.yaml
conf/hamiltonian/: chain_10.yaml  chain_20.yaml  square_4x4.yaml  square_6x6.yaml
conf/solution/: classical_vit.yaml  cnn_resnet.yaml  dmrg.yaml  ed.yaml  qmsan.yaml  qmsan_mixed.yaml  qmsan_pure.yaml  qsann.yaml  rbm.yaml  simplified_vit.yaml
conf/training/: default.yaml  fast.yaml  medium.yaml  production.yaml  quantum.yaml
src/: paths.py
src/evaluation/: __init__.py  energy.py  entanglement.py  results.py
src/experiment/: __init__.py  experiment.py  task.py
src/hamiltonians/: __init__.py  j1j2_chain.py  j1j2_square.py  lattice_utils.py
src/models/: __init__.py  base_model.py  factory.py
src/models/classical_models/: __init__.py
src/models/classical_models/classical_vit/: __init__.py  attention.py  encoder.py  model.py
src/models/classical_models/cnn_resnet/: __init__.py  model.py
src/models/quantum_models/: __init__.py  base_quantum_model.py  device.py
src/models/training/: __init__.py  callbacks.py  sr_optimizer.py  vmc_runner.py
src/numerical_solvers/: __init__.py
src/numerical_solvers/dmrg/: __init__.py  solver.py
src/numerical_solvers/ed/: __init__.py  solver.py
src/utils/: constants.py  exceptions.py  experiment.py  logger.py  mlflow_tracker.py  number.py
(+12 files in other folders)
