[project]
name = "qtransformer-on-frustrated-heisenberg-model"
version = "0.1.0"
package-mode = false
description = "Quantum Attention Mechanisms as Variational Wavefunction Ansätze for the 2D Frustrated Heisenberg Model"
authors = [
    {name = "Haoyu Zhang", email = "zhang.haoyu6@northeastern.edu"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pennylane>=0.44.1,<0.45.0",
    "pennylane-lightning>=0.44.0,<0.45.0",
    "netket>=3.21.0,<4.0.0",
    "flax>=0.12.6,<0.13.0",
    "optax>=0.2.8,<0.3.0",
    "quspin>=1.0.0,<2.0.0",
    "physics-tenpy (>=1.1.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.2,<3)",
    "tqdm (>=4.67.3,<5.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "mlflow (>=3.10.1,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

